manifests/overseerr/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: overseerr
  namespace: overseerr
spec:
  containers:
  - name: overseerr
    image: sctx/overseerr:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: data
      mountPath: /app/config
    ports:
    - containerPort: 5055
      name: http
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: overseerr-storage
