manifests/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: ClusterIP
