manifests/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: brrws-xyz
  name: overseerr
  namespace: overseerr
spec:
  ingressClassName: brrws-xyz
  rules:
  - host: overseerr.brrws.xyz
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.brrws.xyz
    secretName: overseerr-brrws-xyz
